# scalable_p2p

./: .gitignore  CMakeLists.txt  Contributions.md  Makefile  README.md  build.sh  debug.cpp  main.cpp  nexus  node.cpp  packet.hpp  registry_server  runme.sh
Python code/: README.md  ground_node.py  packet.py  satellite_node.py  test_file_transfer.py
nexus_main/: main.cpp
registry_main/: main.cpp
src/: CryptoManager.cpp  CryptoManager.h  GroundNode.cpp  GroundNode.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  NexusRegistryServer.cpp  NexusRegistryServer.h  Node.cpp  Node.h  NodeType.h  Packet.cpp  Packet.hpp  SatelliteNode.cpp  SatelliteNode.h  Utility.cpp  Utility.h  packet.cpp  packet.hpp
src/Node/: GroundNode.h  Node.cpp  Node.h  SatelliteNode.h
